# LXMeter

./: CMakeLists.txt
include/: addresses.h  io.h
src/: io.c  main.c
